--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
             <version>5.0.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.0.1</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
     <build>
