--- a/src/main/resources/onliner.properties
+++ b/src/main/resources/onliner.properties
@@ -1,4 +1,4 @@
 browser=CHROME
 url=https://catalog.onliner.by/
-
-
+textErrorPassword=Пароль должен быть от 8 до 64 символов
+errorCheckBoxText=Для регистрации аккаунта необходимо ваше согласие с Политикой конфиденциальности и Пользовательским соглашением
