--- a/src/main/resources/onliner.properties
+++ b/src/main/resources/onliner.properties
@@ -2,3 +2,5 @@ browser=CHROME
 url=https://catalog.onliner.by/
 textErrorPassword=Пароль должен быть от 8 до 64 символов
 errorCheckBoxText=Для регистрации аккаунта необходимо ваше согласие с Политикой конфиденциальности и Пользовательским соглашением
+urlRegistration = https://profile.onliner.by/registration
+urlRecoverPassword = https://profile.onliner.by/recover-password
